More dungeon page updates

--- a/html/dungeon/onigashima.html
+++ b/html/dungeon/onigashima.html
@@ -71,9 +71,6 @@
                   <li><a href="#golden_interval">Shop + Trader</a></li>
                 </ul>
                 <li><a href="#golden_interval">Golden Interval</a></li>
-                <ul>
-                  <li><a href="#golden_interval_items">Items</a></li>
-                </ul>
                 <li><a href="#floor_guide">No Carry-in Guide</a></li>
                 <ul>
                   <li><a href="#waterfall_basin">Important Items</a></li>
@@ -210,22 +207,18 @@
             <table>
               <tr>
                 <th>1</th>
-                <td class="monster_normal">Mamel (10)</td>
-                <td class="monster_normal">Pit Mamel (5)</td>
-                <td class="monster_normal">Chintala (8)</td>
-                <td></td>
-                <td></td>
+                <td class="monster_normal">Mamel ()</td>
+                <td class="monster_normal">Pit Mamel ()</td>
+                <td class="monster_normal">Chintala ()</td>
                 <td></td>
                 <td></td>
                 <td></td>
               </tr>
               <tr>
                 <th>2</th>
-                <td class="monster_normal">Mamel (8)</td>
-                <td class="monster_normal">Pit Mamel (14)</td>
-                <td class="monster_normal">Chintala (8)</td>
-                <td class="monster_weapon">Ashigarudon (6)</td>
-                <td></td>
+                <td class="monster_normal">Mamel ()</td>
+                <td class="monster_normal">Pit Mamel ()</td>
+                <td class="monster_normal">Chintala ()</td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -1058,7 +1051,7 @@
           <p>Text</p>
           <h2 id="floor_guide">Golden Interval</h2>
           <p>Text</p>
-          <h4>Items</h4>
+          <h3>Items</h3>
         </div>
       </div>
       <div id="footer" class="box footer"></div>
