--- a/html/dungeon/shuten_trail_easy.html
+++ b/html/dungeon/shuten_trail_easy.html
@@ -43,17 +43,17 @@
                 <li><a href="#dungeon_overview">Dungeon Overview</a></li>
                 <li><a href="#floor_guide">Floor Guide</a></li>
                 <ul>
-                  <li><a href="#green_forest">1~2F Green Forest (Shuffle)</a></li>
-                  <li><a href="#bamboo_forest">3~4F Bamboo Forest (Shuffle)</a></li>
-                  <li><a href="#deserted_shaft">5~6F Deserted Shaft</a></li>
+                  <li><a href="#green_forest">01~02F Green Forest (Shuffle)</a></li>
+                  <li><a href="#bamboo_forest">03~04F Bamboo Forest (Shuffle)</a></li>
+                  <li><a href="#deserted_shaft">05~06F Deserted Shaft</a></li>
                   <li><a href="#shuten_halfway">Shuten Halfway</a></li>
                   <ul>
                     <li><a href="#blacksmith">Blacksmith</a></li>
                     <li><a href="#traders_shop">Trader's Shop</a></li>
                   </ul>
-                  <li><a href="#inexhaustible_falls">7F Inexhaustible Falls (Shuffle)</a></li>
-                  <li><a href="#stalactite_cave">8F Stalactite Cave</a></li>
-                  <li><a href="#abyss_gorge">9~10F Abyss Gorge (Shuffle)</a></li>
+                  <li><a href="#inexhaustible_falls">07F Inexhaustible Falls (Shuffle)</a></li>
+                  <li><a href="#stalactite_cave">08F Stalactite Cave</a></li>
+                  <li><a href="#abyss_gorge">09~10F Abyss Gorge (Shuffle)</a></li>
                 </ul>
                 <li><a href="#monsters">Monsters</a></li>
                 <li><a href="#items">Items</a></li>
@@ -139,7 +139,7 @@
             </li>
           </ol>
           <h2 id="floor_guide">Floor Guide</h2>
-          <h3 id="green_forest">1~2F Green Forest (Shuffle)</h3>
+          <h3 id="green_forest">01~02F Green Forest (Shuffle)</h3>
           <p>
             The only monsters that appear are <a href="/shiren2/html/system/monster.html#mamel_family">Mamel</a> and <a href="/shiren2/html/system/monster.html#chintala_family">Chintala</a>, similar to Small Valley.<br>
             They're weak, so you shouldn't have any trouble defeating them.<br>
@@ -157,7 +157,7 @@
             It lets you keep your Gitan if you collapse, but it takes up 3 inventory slots,<br>
             so it's only recommended for those who aren't confident in their abilities.
           </p>
-          <h3 id="bamboo_forest">3~4F Bamboo Forest (Shuffle)</h3>
+          <h3 id="bamboo_forest">03~04F Bamboo Forest (Shuffle)</h3>
           <p>
             Monsters include <a href="/shiren2/html/system/monster.html#weather_doll_family">Weather Doll</a>, <a href="/shiren2/html/system/monster.html#ashigarudon_family">Ashigarudon</a>, <a href="/shiren2/html/system/monster.html#slug_family">Slug</a>, <a href="/shiren2/html/system/monster.html#yamikichi_family">Yamikichi</a>, and <a href="/shiren2/html/system/monster.html#piko_hammer_family">Piko Hammer</a>.
           </p>
@@ -171,7 +171,7 @@
             trouble defeating them if you leveled up in Green Forest as recommended.<br>
             Recommended to get Shiren up to level 4~5 before proceeding to 5F.
           </p>
-          <h3 id="deserted_shaft">5~6F Deserted Shaft</h3>
+          <h3 id="deserted_shaft">05~06F Deserted Shaft</h3>
           <p>
             Monsters include <a href="/shiren2/html/system/monster.html#piko_hammer_family">Piko Hammer</a>, <a href="/shiren2/html/system/monster.html#droplet_ninja_family">Droplet Ninja</a>, and <a href="/shiren2/html/system/monster.html#armordillo_family">Armordillo</a>.
           </p>
@@ -319,7 +319,7 @@
             a Trader will visit Napus Village and offer the same items for sale.<br>
             The Napus Village Trader will disappear when you clear Shuten Trail Easy.
           </p>
-          <h3 id="inexhaustible_falls">7F Inexhaustible Falls (Shuffle)</h3>
+          <h3 id="inexhaustible_falls">07F Inexhaustible Falls (Shuffle)</h3>
           <p>
             Monsters include <a href="/shiren2/html/system/monster.html#hunger_puppet_family">Hunger Puppet</a>, <a href="/shiren2/html/system/monster.html#zalokleft_family">Zalokleft</a>, and <a href="/shiren2/html/system/monster.html#ndubba_family">N'dubba</a>.
           </p>
@@ -333,7 +333,7 @@
             So be sure to have plenty of HP before picking up items on floors where N'dubba appears.<br>
             Note that you can recover HP quickly by holding B + A buttons together.
           </p>
-          <h3 id="stalactite_cave">8F Stalactite Cave</h3>
+          <h3 id="stalactite_cave">08F Stalactite Cave</h3>
           <p>
             Monsters include the ones from 7F, and new arrivals <a href="/shiren2/html/system/monster.html#ashigarudon_family">Samuraidon</a> and <a href="/shiren2/html/system/monster.html#horse_ronin_family">Horse Ronin</a>.
           </p>
@@ -349,7 +349,7 @@
             Not even Dragon Grass is enough to defeat Horse Samurai in a single hit (79 HP),<br>
             so if that happens, run to the stairs while moving in a zig-zag pattern to avoid arrows.
           </p>
-          <h3 id="abyss_gorge">9~10F Abyss Gorge (Shuffle)</h3>
+          <h3 id="abyss_gorge">09~10F Abyss Gorge (Shuffle)</h3>
           <p>
             New arrivals for 9F include <a href="/shiren2/html/system/monster.html#nigiri_trainee_family">Nigiri Morph</a> and <a href="/shiren2/html/system/monster.html#tiger_tosser_family">Tiger Tosser</a>.
           </p>
@@ -407,8 +407,8 @@
                 <th>3</th>
                 <td class="monster_normal">Weather Doll (10)</td>
                 <td class="monster_weapon">Ashigarudon (7)</td>
-                <td class="monster_ghost">Yamikichi (6)</td>
-                <td class="monster_drain">Slug (5)</td>
+                <td rowspan="2" class="monster_ghost">Yamikichi (6)</td>
+                <td rowspan="2" class="monster_drain">Slug (5)</td>
                 <td></td>
                 <td></td>
               </tr>
@@ -416,8 +416,6 @@
                 <th>4</th>
                 <td class="monster_normal">Weather Doll (9)</td>
                 <td class="monster_weapon">Ashigarudon (10)</td>
-                <td class="monster_ghost">Yamikichi (6)</td>
-                <td class="monster_drain">Slug (5)</td>
                 <td class="monster_normal">Piko Hammer (6)</td>
                 <td></td>
               </tr>
@@ -444,36 +442,29 @@
               </tr>
               <tr>
                 <th>7</th>
-                <td class="monster_normal">N'dubba (3)</td>
-                <td class="monster_water">Zalokleft (8)</td>
-                <td class="monster_drain">Hunger Puppet (8)</td>
+                <td rowspan="3" class="monster_normal">N'dubba (3)</td>
+                <td rowspan="2" class="monster_water">Zalokleft (8)</td>
+                <td rowspan="2" class="monster_drain">Hunger Puppet (8)</td>
                 <td></td>
                 <td></td>
                 <td></td>
               </tr>
               <tr>
                 <th>8</th>
-                <td class="monster_normal">N'dubba (3)</td>
-                <td class="monster_water">Zalokleft (8)</td>
-                <td class="monster_drain">Hunger Puppet (8)</td>
                 <td class="monster_weapon">Samuraidon (6)</td>
-                <td class="monster_normal">Horse Ronin (6)</td>
+                <td rowspan="2" class="monster_normal">Horse Ronin (6)</td>
                 <td></td>
               </tr>
               <tr>
                 <th>9</th>
-                <td class="monster_normal">N'dubba (3)</td>
-                <td class="monster_normal">Tiger Tosser (6)</td>
-                <td class="monster_item_change">Nigiri Morph (6)</td>
+                <td rowspan="2" class="monster_normal">Tiger Tosser (6)</td>
+                <td rowspan="2" class="monster_item_change">Nigiri Morph (6)</td>
                 <td class="monster_weapon">Samuraidon (10)</td>
-                <td class="monster_normal">Horse Ronin (6)</td>
                 <td></td>
               </tr>
               <tr>
                 <th>10</th>
                 <td class="monster_normal">Landmine Ninja (9)</td>
-                <td class="monster_normal">Tiger Tosser (6)</td>
-                <td class="monster_item_change">Nigiri Morph (6)</td>
                 <td class="monster_weapon">Samuraidon (8)</td>
                 <td class="monster_normal">Sheep Priest (9)</td>
                 <td class="monster_dragon">Shaaga (7)</td>
@@ -869,10 +860,10 @@
             </table>
             <ul class="dungeon_table_notes">
               <li>
-                - Presto Pots, Surprise Pots, Shops, and Traders don't appear in Shuten Trail Easy.
+                ・ Presto Pots, Surprise Pots, Shops, and Traders don't appear in Shuten Trail Easy.
               </li>
               <li>
-                - Presto Pot item table is the same as Shuten Trail Mid.
+                ・ Presto Pot item table is the same as Shuten Trail Mid.
               </li>
               <li>
                 ※ Memento Pot is a special item that only appears if you collapse in a dungeon.
