--- a/html/dungeon/shuten_trail_mid.html
+++ b/html/dungeon/shuten_trail_mid.html
@@ -42,13 +42,13 @@
                 <li><a href="#dungeon_overview">Dungeon Overview</a></li>
                 <li><a href="#floor_guide">Floor Guide</a></li>
                 <ul>
-                  <li><a href="#quiet_cave">1~2F Quiet Cave</a></li>
-                  <li><a href="#ravine_stream">3~4F Ravine Stream (Shuffle)</a></li>
-                  <li><a href="#lapis_grotto">5F Lapis Grotto</a></li>
-                  <li><a href="#dororo_creek">6~7F Dororo Creek (Shuffle)</a></li>
+                  <li><a href="#quiet_cave">01~02F Quiet Cave</a></li>
+                  <li><a href="#ravine_stream">03~04F Ravine Stream (Shuffle)</a></li>
+                  <li><a href="#lapis_grotto">05F Lapis Grotto</a></li>
+                  <li><a href="#dororo_creek">06~07F Dororo Creek (Shuffle)</a></li>
                   <li><a href="#shuten_halfway">Shuten Halfway</a></li>
-                  <li><a href="#wandering_cave">8F Wandering Cave</a></li>
-                  <li><a href="#great_canyon">9~10F Great Canyon (Shuffle)</a></li>
+                  <li><a href="#wandering_cave">08F Wandering Cave</a></li>
+                  <li><a href="#great_canyon">09~10F Great Canyon (Shuffle)</a></li>
                   <li><a href="#phantom_pass">11~12F Phantom Pass (Shuffle)</a></li>
                   <li><a href="#headwater_cave">13F Headwater Cave</a></li>
                 </ul>
@@ -139,19 +139,19 @@
             </li>
           </ol>
           <h2 id="floor_guide">Floor Guide</h2>
-          <h3 id="quiet_cave">1~2F Quiet Cave</h3>
+          <h3 id="quiet_cave">01~02F Quiet Cave</h3>
           <p></p>
-          <h3 id="ravine_stream">3~4F Ravine Stream (Shuffle)</h3>
+          <h3 id="ravine_stream">03~04F Ravine Stream (Shuffle)</h3>
           <p></p>
-          <h3 id="lapis_grotto">5F Lapis Grotto</h3>
+          <h3 id="lapis_grotto">05F Lapis Grotto</h3>
           <p></p>
-          <h3 id="dororo_creek">6~7F Dororo Creek (Shuffle)</h3>
+          <h3 id="dororo_creek">06~07F Dororo Creek (Shuffle)</h3>
           <p></p>
           <h3 id="shuten_halfway">Shuten Halfway</h3>
           <p></p>
-          <h3 id="wandering_cave">8F Wandering Cave</h3>
+          <h3 id="wandering_cave">08F Wandering Cave</h3>
           <p></p>
-          <h3 id="great_canyon">9~10F Great Canyon (Shuffle)</h3>
+          <h3 id="great_canyon">09~10F Great Canyon (Shuffle)</h3>
           <p></p>
           <h3 id="phantom_pass">11~12F Phantom Pass (Shuffle)</h3>
           <p></p>
@@ -164,7 +164,7 @@
                 <th>1</th>
                 <td class="monster_normal">Mamel (10)</td>
                 <td class="monster_normal">Pit Mamel (5)</td>
-                <td class="monster_normal">Chintala (8)</td>
+                <td rowspan="2" class="monster_normal">Chintala (8)</td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -175,8 +175,7 @@
                 <th>2</th>
                 <td class="monster_normal">Mamel (8)</td>
                 <td class="monster_normal">Pit Mamel (14)</td>
-                <td class="monster_normal">Chintala (8)</td>
-                <td class="monster_weapon">Ashigarudon (6)</td>
+                <td rowspan="3" class="monster_weapon">Ashigarudon (6)</td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -184,10 +183,9 @@
               </tr>
               <tr>
                 <th>3</th>
-                <td class="monster_normal">Nigiri Trainee (8)</td>
-                <td class="monster_ghost">Yamikichi (9)</td>
+                <td rowspan="2" class="monster_normal">Nigiri Trainee (8)</td>
+                <td rowspan="2" class="monster_ghost">Yamikichi (9)</td>
                 <td></td>
-                <td class="monster_weapon">Ashigarudon (6)</td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -195,11 +193,8 @@
               </tr>
               <tr>
                 <th>4</th>
-                <td class="monster_normal">Nigiri Trainee (8)</td>
-                <td class="monster_ghost">Yamikichi (9)</td>
                 <td></td>
-                <td class="monster_weapon">Ashigarudon (6)</td>
-                <td class="monster_normal">Droplet Ninja (8)</td>
+                <td rowspan="2" class="monster_normal">Droplet Ninja (8)</td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -210,7 +205,6 @@
                 <td class="monster_normal">Mid Chintala (8)</td>
                 <td></td>
                 <td></td>
-                <td class="monster_normal">Droplet Ninja (8)</td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -218,23 +212,18 @@
               <tr>
                 <th>6</th>
                 <td></td>
-                <td class="monster_normal">Gamarra (6)</td>
+                <td rowspan="2" class="monster_normal">Gamarra (6)</td>
                 <td class="monster_special">Mr. Drone (4)</td>
-                <td class="monster_water">Spearfish (8)</td>
-                <td class="monster_one_eyed">Gazer (8)</td>
-                <td class="monster_water">Lt. Spearfish (8)</td>
-                <td class="monster_drain">Hunger Puppet (8)</td>
+                <td rowspan="2" class="monster_water">Spearfish (8)</td>
+                <td rowspan="2" class="monster_one_eyed">Gazer (8)</td>
+                <td rowspan="2" class="monster_water">Lt. Spearfish (8)</td>
+                <td rowspan="2" class="monster_drain">Hunger Puppet (8)</td>
                 <td></td>
               </tr>
               <tr>
                 <th>7</th>
                 <td class="monster_normal">N'dubba (5)</td>
-                <td class="monster_normal">Gamarra (6)</td>
                 <td class="monster_special">Mr. Drone (3)</td>
-                <td class="monster_water">Spearfish (8)</td>
-                <td class="monster_one_eyed">Gazer (8)</td>
-                <td class="monster_water">Lt. Spearfish (8)</td>
-                <td class="monster_drain">Hunger Puppet (8)</td>
                 <td class="monster_special">Mr. Helico (1)</td>
               </tr>
               <tr>
@@ -242,8 +231,8 @@
               </tr>
               <tr>
                 <th>8</th>
-                <td class="monster_normal">N'dubba (5)</td>
-                <td class="monster_normal">Bow Cart (6)</td>
+                <td rowspan="2" class="monster_normal">N'dubba (5)</td>
+                <td rowspan="2" class="monster_normal">Bow Cart (6)</td>
                 <td class="monster_drain">Scorpion (6)</td>
                 <td></td>
                 <td class="monster_one_eyed">Gazer (8)</td>
@@ -253,44 +242,33 @@
               </tr>
               <tr>
                 <th>9</th>
-                <td class="monster_normal">N'dubba (5)</td>
-                <td class="monster_normal">Bow Cart (6)</td>
-                <td class="monster_normal">Tiger Tosser (8)</td>
+                <td rowspan="2" class="monster_normal">Tiger Tosser (8)</td>
                 <td class="monster_normal">Sheep Priest (10)</td>
-                <td class="monster_ghost">Gale (6)</td>
+                <td rowspan="2" class="monster_ghost">Gale (6)</td>
                 <td></td>
                 <td></td>
                 <td></td>
               </tr>
               <tr>
                 <th>10</th>
-                <td class="monster_weapon">Taishodon (8)</td>
-                <td class="monster_weapon">Kengo (5)</td>
-                <td class="monster_normal">Tiger Tosser (8)</td>
+                <td rowspan="3" class="monster_weapon">Taishodon (8)</td>
+                <td rowspan="3" class="monster_weapon">Kengo (5)</td>
                 <td class="monster_normal">Sheep Priest (8)</td>
-                <td class="monster_ghost">Gale (6)</td>
                 <td></td>
                 <td></td>
                 <td></td>
               </tr>
               <tr>
                 <th>11</th>
-                <td class="monster_weapon">Taishodon (8)</td>
-                <td class="monster_weapon">Kengo (5)</td>
-                <td class="monster_normal">Summon Ninja (8)</td>
-                <td class="monster_normal">Goat Pastor (8)</td>
-                <td class="monster_ghost">Pumphantasm (8)</td>
+                <td rowspan="2" class="monster_normal">Summon Ninja (8)</td>
+                <td rowspan="2" class="monster_normal">Goat Pastor (8)</td>
+                <td rowspan="2" class="monster_ghost">Pumphantasm (8)</td>
                 <td></td>
                 <td></td>
                 <td></td>
               </tr>
               <tr>
                 <th>12</th>
-                <td class="monster_weapon">Taishodon (8)</td>
-                <td class="monster_weapon">Kengo (5)</td>
-                <td class="monster_normal">Summon Ninja (8)</td>
-                <td class="monster_normal">Goat Pastor (8)</td>
-                <td class="monster_ghost">Pumphantasm (8)</td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -803,12 +781,7 @@
                 <td>☆</td>
                 <td>☆</td>
                 <td>★</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td colspan="6" rowspan="8"></td>
                 <td>Perfect Wood</td>
                 <td>☆</td>
                 <td></td>
@@ -822,12 +795,6 @@
                 <td>☆</td>
                 <td>☆</td>
                 <td>☆</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
                 <td></td>
                 <td></td>
                 <td>Rock</td>
@@ -850,12 +817,6 @@
                 <td></td>
                 <td></td>
                 <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
                 <td>Good Rock</td>
                 <td>☆</td>
                 <td></td>
@@ -870,18 +831,7 @@
                 <td></td>
                 <td>☆</td>
                 <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td colspan="6" rowspan="5"></td>
                 <td>Iron Sand</td>
                 <td>☆</td>
                 <td></td>
@@ -895,18 +845,6 @@
                 <td>☆</td>
                 <td></td>
                 <td>☆</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
                 <td></td>
                 <td>Good Iron Sand</td>
                 <td>☆</td>
@@ -922,24 +860,7 @@
                 <td></td>
                 <td></td>
                 <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td colspan="6" rowspan="3"></td>
               </tr>
               <tr>
                 <td>No Control Bracelet</td>
@@ -948,24 +869,6 @@
                 <td></td>
                 <td></td>
                 <td>＊</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
               </tr>
               <tr>
                 <td>Salty Bracelet</td>
@@ -973,24 +876,6 @@
                 <td>☆</td>
                 <td></td>
                 <td>☆</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
                 <td></td>
               </tr>
             </table>
