update item tables

--- a/html/dungeon/shuten_trail_mid.html
+++ b/html/dungeon/shuten_trail_mid.html
@@ -887,7 +887,7 @@
                 ＊ Items that ally Kengo family monsters can fling during the boss fight on 13F.
               </li>
               <li>
-                ★ Possible monster drop from a higher level monster.
+                ★ Possible drop from a higher level monster.
               </li>
             </ul>
           </div>
